Add new metric information gets without params
