# controllers/UserProject.js
@@ -5,13 +5,24 @@ var url = require('url');
 
 var UserProject = require('./UserProjectService');
 
+module.exports.userProjectGeneralMetrics = function userProjectGeneralMetrics (req, res, next) {
 
-module.exports.userProjectMetricsInfo = function userProjectMetricsInfo (req, res, next) {
+  var result = UserProject.userProjectGeneralMetrics();
+  if(typeof result !== 'undefined') {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(result || {}, null, 2));
+  }
+  else
+    res.end();
+};
+
+module.exports.userProjectMetrics = function userProjectMetrics (req, res, next) {
+
   var uid = req.swagger.params['uid'].value;
   var pid = req.swagger.params['pid'].value;
   
 
-  var result = UserProject.userProjectMetricsInfo(uid, pid);
+  var result = UserProject.userProjectMetrics(uid, pid);
 
   if(typeof result !== 'undefined') {
     res.setHeader('Content-Type', 'application/json');
@@ -24,6 +35,7 @@ module.exports.userProjectMetricsInfo = function userProjectMetricsInfo (req, re
 };
 
 module.exports.userProjectMetric = function userProjectMetric (req, res, next) {
+
   var uid = req.swagger.params['uid'].value;
   var pid = req.swagger.params['pid'].value;
   var mid = req.swagger.params['mid'].value;
